--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 * {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
 }
 
 .Main-title {
 
     text-align: center;
-    font-size: 3.5rem;
-    color: rgb(151, 148, 142);
+    font-size: 4rem;
+    color: rgb(0, 0, 0);
+
     /* transform: translateY(5.25rem); */
 }
 
@@ -15,55 +17,155 @@ html {
     height: 100%;
     margin-top: 0;
     padding-top: 0;
+    margin-bottom: 0;
+    padding-bottom: 20px;
+}
+
+body {
+    min-height: 100vh;
 }
 
 .bg {
     /* The image used */
-    background-image: url("/assets/img/bg1.jpg");
+    /* background-image: url("/assets/img/bg4.jpg"); */
 
     /* Full height */
-    height: 100%;
+    height: 120%;
 
-
+    margin: 0;
     /* Center and scale the image nicely */
-    background-position: center;
+    /* background-position: center; */
     background-repeat: no-repeat;
     background-size: cover;
-
-    background-color: rgb(188, 255, 3);
+    background-color: rgb(135, 128, 199);
 }
 
 .flexbox-container {
     display: flex;
     justify-content: center;
-    align-items: stretch;
+
+
 }
 
 .flexbox-item {
 
     width: 42rem;
-    height: 57rem;
-    margin: 2px;
+    margin: 10px;
     background-color: rgba(0, 0, 0, 0.747);
     border: 3px solid rgb(100, 100, 100);
+    padding: 2rem;
+
+
+}
+
+
+.fb-left {
+    min-height: 25rem;
+    flex-shrink: 1;
+    flex-grow: 0;
+    padding-top: 6rem;
+}
+
+.fb-right {
+    min-height: 55rem;
+    flex-shrink: 1;
+    flex-grow: 0;
+}
+
+/* SVG FILE */
+
+.dub-map {
+
+    transform: translateY(-2rem);
+}
+
+.fb-left path {
+
+
+    fill: rgb(175, 145, 61);
+    stroke: #FFFFFF;
+    stroke-width: 3;
+    transition: fill 0.3s;
+}
+
+
+.dubrath {
+    fill: rgb(255, 251, 0);
+    stroke: #FFFFFF;
+    stroke-width: 1;
+}
+
+.dunlaogh {
+    fill: rgb(10, 10, 10);
+    stroke: #FFFFFF;
+    stroke-width: 1;
+}
+
+.fingal {
+    fill: rgb(118, 161, 87);
+    stroke: #FFFFFF;
+    stroke-width: 0.7683;
+}
+
+.dubwest {
+    fill: rgb(21, 255, 0);
+    stroke: #FFFFFF;
+    stroke-width: 0.7683;
+}
+
+.dubnwest {
+    fill: #38A6A5;
+    stroke: #FFFFFF;
+    stroke-width: 0.7683;
+}
+
+.dubbnorth {
+    fill: #E17C05;
+    stroke: #FFFFFF;
+    stroke-width: 0.7683;
+}
+
+.dubcentral {
+    fill: rgb(255, 0, 0);
+    stroke: #FFFFFF;
+    stroke-width: 0.7683;
+}
+
+.dubmidwest {
+    fill: #0F8554;
+    stroke: #FFFFFF;
+    stroke-width: 0.7683;
+}
+
+.dubscentral {
+    fill: rgb(0, 194, 228);
+    stroke: #FFFFFF;
+    stroke-width: 0.7683;
+}
+
+.dubbsouth {
+    fill: #CC503E;
+    stroke: #FFFFFF;
+    stroke-width: 0.7683;
+}
+
+.dubswest {
+    fill: rgb(104, 75, 102);
+    stroke: #FFFFFF;
+    stroke-width: 0.7683;
 }
 
 
 
-
-
-
-
-
-
-
-/* .div-left {
-
-    width: 10rem;
-    height: 10rem;
-    flex-direction: column;
-    display: flex;
-    color: rgba(41, 41, 41, 0.85));
+.fb-left path {
+    fill: rgb(175, 145, 61);
+    stroke: #FFFFFF;
+    stroke-width: 3;
+    transition: fill 0.3s;
 }
 
-.div-right {} */
+.fb-left path:hover {
+    fill: #38A6A5;
+    transition: 0.6s;
+    cursor: pointer;
+}
