--- a/style.css
+++ b/style.css
@@ -6,9 +6,9 @@
 .Main-title {
 
     text-align: center;
-    font-size: 4rem;
+    font-size: 3rem;
     color: rgb(0, 0, 0);
-    padding-bottom: 2rem;
+    padding-bottom: 1rem;
     padding-top: 1rem;
 
     /* transform: translateY(5.25rem); */
@@ -20,7 +20,7 @@ html {
     margin-top: 0;
     padding-top: 0;
     margin-bottom: 0;
-    padding-bottom: 20px;
+    padding-bottom: 0;
 }
 
 body {
@@ -45,13 +45,14 @@ body {
 .flexbox-container {
     display: flex;
     justify-content: center;
+    max-height: 50rem;
 
 
 }
 
 .flexbox-item {
 
-    width: 42rem;
+    width: 38rem;
     margin: 10px;
     background-color: rgba(0, 0, 0, 0.747);
     border: 3px solid rgb(100, 100, 100);
@@ -61,6 +62,7 @@ body {
     padding-bottom: 0rem;
 
 
+
 }
 
 
@@ -68,11 +70,11 @@ body {
     min-height: 25rem;
     flex-shrink: 1;
     flex-grow: 0;
-    padding-top: 6rem;
+    padding-top: 5rem;
 }
 
 .fb-right {
-    min-height: 55rem;
+    min-height: 25rem;
     flex-shrink: 1;
     flex-grow: 0;
 }
@@ -81,7 +83,8 @@ body {
 
 .dub-map {
 
-    transform: translateY(-2rem);
+    transform: translate(1rem, -5rem);
+
 }
 
 .fb-left path {
@@ -179,11 +182,11 @@ body {
 /* TEXT LEFT BOX */
 
 .fb-left-title {
-    font-size: 3rem;
+    font-size: 2rem;
     font-weight: 500;
     color: #fafafa;
     text-align: center;
-    padding-bottom: 5rem;
+    padding-bottom: 6rem;
     padding-top: 0;
     margin-top: -60px;
 }
@@ -197,6 +200,7 @@ body {
     display: flex;
     padding-bottom: 0px;
     margin-bottom: 0px;
+    transform: translate(0rem, -7rem);
 }
 
 .left-side-text {
@@ -213,7 +217,7 @@ body {
 
 .right-title {
     text-decoration: underline;
-    font-size: 3rem;
+    font-size: 2rem;
     font-weight: 500;
     color: #fafafa;
     text-align: center;
