--- a/style.css
+++ b/style.css
@@ -226,3 +226,22 @@ body {
     padding-top: 0;
     margin-top: -5px;
 }
+
+/* PIE CHART */
+
+.dub-seats-pie {
+
+    transform: translate(-27px, 230px);
+}
+
+.dub-seats-pie path:hover {
+
+    fill: rgb(203, 218, 6);
+    transition: 0.6s;
+    cursor: pointer;
+}
+
+#data-points {
+
+    color: #000000;
+}
