--- a/style.css
+++ b/style.css
@@ -14,17 +14,21 @@
     /* transform: translateY(5.25rem); */
 }
 
-body,
+
 html {
     height: 100%;
     margin-top: 0;
     padding-top: 0;
     margin-bottom: 0;
     padding-bottom: 0;
+    overflow: hidden;
 }
 
 body {
-    min-height: 100vh;
+    min-height: 100;
+    margin-top: 0;
+    margin-left: 0;
+    margin-right: 0;
 }
 
 .bg {
@@ -32,7 +36,9 @@ body {
     /* background-image: url("/assets/img/bg4.jpg"); */
 
     /* Full height */
-    height: 120%;
+    /* height: 100%; */
+    padding-bottom: 3rem;
+    margin-bottom: 0px;
 
     margin: 0;
     /* Center and scale the image nicely */
