--- a/style.css
+++ b/style.css
@@ -262,8 +262,8 @@ th {
 
 
 .dub-bars {
-    transform: translate(-15px, -460px);
-    max-width: 55%;
+    transform: translate(4px, -629px);
+    max-width: 65%;
 
 }
 
@@ -276,7 +276,7 @@ th {
 
 .dub-seats-pie {
 
-    transform: translate(295px, -43px);
+    transform: translate(390px, -6px);
     /* Shows outline of SVG - NEED FIX */
     /* border: 2px solid black; */
 }
@@ -291,4 +291,8 @@ th {
 #data-points {
 
     color: #000000;
+}
+
+.new-bar-chart {
+    transform: translate(-15px, -460px);
 }
