--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;800&display=swap');
+
 * {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Montserrat', sans-serif;
+    list-style: none;
+    margin: 0;
+    padding: 0;
 
 }
 
@@ -10,6 +15,7 @@
     color: rgb(0, 0, 0);
     padding-bottom: 1rem;
     padding-top: 1rem;
+    line-height: 45px;
 
     /* transform: translateY(5.25rem); */
 }
@@ -29,6 +35,10 @@ body {
     margin-top: 0;
     margin-left: 0;
     margin-right: 0;
+    background: radial-gradient(#c7c7c7, #8965b8);
+    line-height: 24px;
+    font-size: 14px;
+
 }
 
 .bg {
@@ -295,4 +305,128 @@ th {
 
 .new-bar-chart {
     transform: translate(-15px, -460px);
+}
+
+/* HEADER */
+
+.header {
+    justify-content: space-between;
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+}
+
+/* ul */
+.header-buttons {
+    display: flex;
+    justify-content: space-evenly;
+    text-decoration: none;
+    flex-direction: row;
+    align-items: center;
+    align-content: center;
+    position: relative;
+    text-decoration: none;
+    list-style-type: none;
+    padding: 1rem;
+}
+
+/* li */
+.nav-link {
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    font-family: 'RocknRoll One', sans-serif;
+}
+
+.active {
+    color: #00a2ff;
+}
+
+.btn-style {
+    height: 2rem;
+    width: 5rem;
+    border-radius: 10px;
+    background-color: #5F0F40;
+}
+
+.wrapper {
+
+    position: absolute;
+    top: 50%;
+    bottom: 50%;
+    transform: translate(71%, -50%);
+    background: rgb(40, 28, 66);
+    width: 800px;
+    height: 680px;
+    display: flex;
+    border-radius: 12px;
+}
+
+.wrapper .wrapper-left {
+
+    width: 250px;
+    background: rgb(76, 65, 124);
+    padding: 95px 25px;
+
+    align-items: center;
+    border-top-left-radius: 12px;
+    border-bottom-left-radius: 12px;
+    box-shadow: 10px 0 13px 0px rgba(41, 41, 57, 0.7);
+}
+
+.wrapper .wrapper-left ul li {
+
+    background: #313142;
+    margin-bottom: 25px;
+    border-radius: 3px;
+    padding: 12px 25px;
+    text-transform: uppercase;
+    font-weight: 500;
+    position: relative;
+    width: 200px;
+    letter-spacing: 2px;
+    transition: all 0.4s ease;
+    cursor: pointer;
+    overflow: hidden;
+}
+
+.wrapper .wrapper-left ul li p {
+
+    color: #abaacd;
+    position: relative;
+}
+
+.wrapper .wrapper-left ul li::before {
+
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 5px;
+    height: 100px;
+    background: #5437B7;
+    background: linear-gradient(126deg,
+            rgba(2, 0, 3, 1) 0% rgba(123, 90, 231, 1) 0% rgba(88, 54, 206, 1) 100%);
+    border-radius: 5px;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    transition: all 0.4s ease;
+}
+
+.wrapper .wrapper-left ul li:last-child {
+
+    margin-bottom: 0;
+}
+
+.wrapper .wrapper-left ul li.active {
+    width: 250px;
+}
+
+.wrapper .wrapper-left ul li.active p {
+    color: #FFFFFF;
+}
+
+.wrapper .wrapper-left ul li.active::before {
+
+    width: 100%;
+    transition: all 0.2s ease;
 }
