--- a/style.css
+++ b/style.css
@@ -20,6 +20,18 @@
     /* transform: translateY(5.25rem); */
 }
 
+.Main-title2 {
+
+    text-align: center;
+    font-size: 3rem;
+    color: rgb(0, 0, 0);
+    padding-bottom: 0rem;
+    padding-top: 0rem;
+    line-height: 45px;
+
+
+}
+
 
 html {
     height: 100%;
@@ -353,20 +365,19 @@ th {
     position: absolute;
     top: 50%;
     bottom: 50%;
-    transform: translate(500px, -300px);
+    transform: translate(300px, -380px);
     background: rgb(40, 28, 66);
-    width: 800px;
-    height: 680px;
+    width: 1200px;
+    height: 800px;
     display: flex;
     border-radius: 12px;
 }
 
 .wrapper .wrapper-left {
 
-    width: 250px;
+    width: 252px;
     background: rgb(76, 65, 124);
-    padding: 95px 25px;
-
+    padding: 14px 8px;
     align-items: center;
     border-top-left-radius: 12px;
     border-bottom-left-radius: 12px;
@@ -376,7 +387,7 @@ th {
 .wrapper .wrapper-left ul li {
 
     background: #313142;
-    margin-bottom: 25px;
+    margin-bottom: 22px;
     border-radius: 3px;
     padding: 12px 25px;
     text-transform: uppercase;
@@ -470,7 +481,7 @@ th {
     top: 50%;
     left: 50%;
     transform: translate(-55%, -37%);
-    background: url("/assets/img/fingal1.png")no-repeat 0 0;
+    /* background: url("/assets/img/fingal1.png")no-repeat 0 0; */
     width: 100px;
     height: 100px;
 
@@ -518,6 +529,12 @@ th {
     text-align: center;
 }
 
+.wrapper-right .item p {
+    color: #FFFFFF;
+    margin-bottom: 20px;
+}
+
+/* CONST TITLE COLOURS */
 .wrapper-right .item.fingal .item_info p {
     color: #dd0330;
 }
@@ -534,7 +551,48 @@ th {
     color: #41b783;
 }
 
-.wrapper-right .item p {
-    color: #FFFFFF;
-    margin-bottom: 20px;
+.wrapper-right .item.dmw .item_info p {
+    color: #da68d0;
+}
+
+.wrapper-right .item.dnw .item_info p {
+    color: #585707;
+}
+
+.wrapper-right .item.drd .item_info p {
+    color: #1f138d;
+}
+
+.wrapper-right .item.dsc .item_info p {
+    color: #093505;
+}
+
+.wrapper-right .item.dsw .item_info p {
+    color: #ee5802;
+}
+
+.wrapper-right .item.dw .item_info p {
+    color: #135257;
+}
+
+.wrapper-right .item.dw .item_info p {
+    color: #b60b74;
+}
+
+
+/* FINGAL PAGE */
+
+.fingal p {
+
+    width: 152%;
+    padding: 1rem;
+}
+
+
+.const-table {
+
+    transform: translate(307px, -26px);
+    width: 100%;
+    font-size: 14px;
+    background-color: rgb(226, 226, 226);
 }
