Add consistent styles

--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@
     text-align: center;
     font-size: 3rem;
     color: rgb(0, 0, 0);
-    padding-bottom: 1rem;
-    padding-top: 1rem;
+    padding-bottom: 0rem;
+    padding-top: 0rem;
     line-height: 45px;
 
     /* transform: translateY(5.25rem); */
@@ -25,7 +25,7 @@
     text-align: center;
     font-size: 3rem;
     color: rgb(0, 0, 0);
-    padding-bottom: 0rem;
+    padding-bottom: 2rem;
     padding-top: 0rem;
     line-height: 45px;
 
@@ -68,7 +68,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     /* background-color: rgb(137, 130, 201); */
-    background: radial-gradient(#c7c7c7, #8965b8);
+    /* background: radial-gradient(#c7c7c7, #8965b8); */
 }
 
 .flexbox-container {
@@ -259,7 +259,7 @@ table {
     width: 100%;
     font-size: 18px;
     background-color: rgb(226, 226, 226);
-    transform: translate(0, -80px);
+    transform: translate(0, -45px);
 }
 
 .dub-info-table {
@@ -365,12 +365,15 @@ th {
     position: absolute;
     top: 50%;
     bottom: 50%;
-    transform: translate(300px, -380px);
+    transform: translate(300px, -330px);
     background: rgb(40, 28, 66);
     width: 1200px;
     height: 800px;
     display: flex;
     border-radius: 12px;
+
+    justify-content: center;
+    max-height: 50rem;
 }
 
 .wrapper .wrapper-left {
@@ -378,10 +381,11 @@ th {
     width: 252px;
     background: rgb(76, 65, 124);
     padding: 14px 8px;
-    align-items: center;
+    align-items: left;
     border-top-left-radius: 12px;
     border-bottom-left-radius: 12px;
     box-shadow: 10px 0 13px 0px rgba(41, 41, 57, 0.7);
+    transform: translate(-141px, 0px);
 }
 
 .wrapper .wrapper-left ul li {
@@ -583,15 +587,16 @@ th {
 /* FINGAL PAGE */
 
 .fingal p {
-
-    width: 152%;
-    padding: 1rem;
+    align-content: stretch;
+    text-align: justify;
+    width: 125%;
+    padding: 0rem;
 }
 
 
 .const-table {
 
-    transform: translate(307px, -26px);
+    transform: translate(150px, -10px);
     width: 100%;
     font-size: 14px;
     background-color: rgb(226, 226, 226);
