--- a/style.css
+++ b/style.css
@@ -601,3 +601,29 @@ th {
     font-size: 14px;
     background-color: rgb(226, 226, 226);
 }
+
+/* FLIP FUNCTION  */
+
+
+.card.visible .card-back {
+    transform: rotateY(-180deg);
+}
+
+.card.visible .card-front {
+    transform: rotateY(0);
+}
+
+.card-front {
+    transform: rotateY(180deg);
+    background-color: bisque;
+    border-style: solid;
+    border-color: black;
+    border-width: 2px;
+    display: flex;
+    position: relative;
+}
+
+.card-back {
+    display: flex;
+    position: relative;
+}
