--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
     font-size: 3rem;
     color: rgb(0, 0, 0);
     padding-bottom: 0rem;
-    padding-top: 0rem;
+    padding-top: 1rem;
     line-height: 45px;
 
     /* transform: translateY(5.25rem); */
@@ -26,7 +26,7 @@
     font-size: 3rem;
     color: rgb(0, 0, 0);
     padding-bottom: 2rem;
-    padding-top: 0rem;
+    padding-top: 1rem;
     line-height: 45px;
 
 
@@ -48,7 +48,7 @@ body {
     margin-left: 0;
     margin-right: 0;
     background: radial-gradient(#c7c7c7, #8965b8);
-    line-height: 24px;
+    line-height: 22px;
     font-size: 14px;
 
 }
@@ -362,13 +362,13 @@ th {
 
 .wrapper {
 
-    position: absolute;
-    top: 50%;
-    bottom: 50%;
-    transform: translate(300px, -330px);
+    position: relative;
+    /* top: 50%;
+    bottom: 50%; */
+    transform: translate(261px, -26px);
     background: rgb(40, 28, 66);
-    width: 1200px;
-    height: 800px;
+    width: 87rem;
+    height: 48rem;
     display: flex;
     border-radius: 12px;
 
@@ -380,12 +380,12 @@ th {
 
     width: 252px;
     background: rgb(76, 65, 124);
-    padding: 14px 8px;
+    padding: 10px 8px;
     align-items: left;
     border-top-left-radius: 12px;
     border-bottom-left-radius: 12px;
     box-shadow: 10px 0 13px 0px rgba(41, 41, 57, 0.7);
-    transform: translate(-141px, 0px);
+    transform: translate(-237px, 0px);
 }
 
 .wrapper .wrapper-left ul li {
@@ -456,8 +456,10 @@ th {
     text-align: center;
     font-weight: 700;
     color: #6b6b93;
-    margin-bottom: 20px;
+    margin-bottom: 0px;
     text-transform: uppercase;
+    transform: translate(8rem, 0%);
+
 }
 
 .wrapper-right .item .item_info {
@@ -470,13 +472,13 @@ th {
 
 .wrapper-right .item .item_info .img {
 
-    width: 200px;
-    height: 200px;
+    width: 250px;
+    height: 238px;
     background: #fff;
     border-radius: 50%;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
     position: relative;
-    transform: translate(-47%, -2%);
+    transform: translate(-97%, -2%);
 }
 
 .wrapper-right .item .item_info .img:before {
@@ -493,11 +495,11 @@ th {
 
 .wrapper-right .item.fingal .item_info .img:before {
     background-position: 0 0;
-    width: 211px;
-    height: 165px;
-    transform: translate(-5%, 8%);
+    width: 219px;
+    height: 170px;
+    transform: translate(2%, 18%);
     border-radius: 50%;
-    background-image: url(/assets/img/DubFingal.png);
+    background-image: url(/assets/img/DubFing.png);
     background-size: cover;
 }
 
@@ -607,8 +609,8 @@ th {
 
 
 .wrapper-right .item .item_info p {
-    font-size: 35px;
-    line-height: 35px;
+    font-size: 45px;
+    line-height: 36px;
     background: #FFFFFF;
     width: 319px;
     height: 70px;
@@ -622,6 +624,7 @@ th {
     transform: translate(13px, -28px);
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: black;
+    align-content: center;
 }
 
 .wrapper-right .item p {
@@ -676,9 +679,9 @@ th {
 
 .const-table {
 
-    transform: translate(316px, -42px);
-    width: 68%;
-    font-size: 16px;
+    transform: translate(371px, -37px);
+    width: 76%;
+    font-size: 18px;
     background-color: rgb(226, 226, 226);
 }
 
