--- a/style.css
+++ b/style.css
@@ -257,32 +257,25 @@ body {
     margin-top: -5px;
 }
 
-table {
-    width: 100%;
-    font-size: 18px;
-    background-color: rgb(226, 226, 226);
-    transform: translate(0, -45px);
-}
+/* TABLE STYLING  */
+
 
 .dub-info-table {
-    border: 4px solid rgb(0, 0, 0);
+    /* width: 100%;
+    
+   border: 2px solid rgb(173, 139, 25) border: 2px solid rgb(0, 0, 0);
+    transform: translate(0, -45px);
+    border: 4px solid rgb(0, 0, 0); */
+    border-collapse: collapse;
+    margin: 25px;
+    font-size: 2rem;
+    min-width: 400px;
+    background-color: rgb(226, 226, 226);
 }
 
-table,
-th,
-td {
-    border: 2px solid rgb(173, 139, 25);
-}
 
-table,
-th {
-    text-align: center;
-}
 
-.table-head {
-    border: 2px solid rgb(0, 0, 0);
 
-}
 
 
 .dub-bars {
@@ -744,7 +737,7 @@ th {
 
     position: absolute;
     transform: translate(-235px, -71px);
-    background: rgba(189, 174, 221, 0.75)5);
+    background: rgba(189, 174, 221, 0.75);
     width: 35rem;
     height: 23rem;
     display: flex;
@@ -758,7 +751,6 @@ th {
     flex-wrap: wrap;
     float: left;
 }
-
 
 .const-section-bottom .chart-wrapper {
 
