Fix bug img pg2

--- a/style.css
+++ b/style.css
@@ -579,13 +579,14 @@ body {
 
 /* CONSTITUENCY MAP IMAGES */
 
-.wrapper-right .item.fingal .item_info .img:before {
+.wrapper-right .item.fingal.item_info.img {
     background-position: 0 0;
     width: 219px;
     height: 170px;
     transform: translate(0%, 28%);
     border-radius: 50%;
     background-image: url(/assets/img/DubFing.png);
+    position: absolute;
     background-size: cover;
 }
 
