--- a/style.css
+++ b/style.css
@@ -573,20 +573,20 @@ body {
     content: "";
     position: absolute;
     transform: translate(0%, 28%);
+    background: url("assets/img/DubFingal.png")no-repeat;
     width: 6rem;
 
 }
 
 /* CONSTITUENCY MAP IMAGES */
 
-.wrapper-right .item.fingal.item_info.img {
+.wrapper-right .item.fingal .item_info .img:before {
     background-position: 0 0;
     width: 219px;
     height: 170px;
-    transform: translate(0%, 28%);
+    transform: translate(2%, 18%);
     border-radius: 50%;
-    background-image: url(/assets/img/DubFing.png);
-    position: absolute;
+    background-image: url(https://sray-2020.github.io/assets/img/DubFing.png);
     background-size: cover;
 }
 
@@ -596,7 +596,7 @@ body {
     height: 240px;
     transform: translate(-21%, -3%);
     border-radius: 50%;
-    background-image: url(/assets/img/DubBNorth1.png);
+    background-image: url(https://sray-2020.github.io/assets/img/DubBNorth1.png);
     background-size: cover;
 }
 
