--- a/style.css
+++ b/style.css
@@ -585,7 +585,7 @@ body {
     height: 170px;
     transform: translate(2%, 18%);
     border-radius: 50%;
-    background-image: url(https://sray-2020.github.io/assets/img/DubFing.png);
+    background-image: url(assets/img/DubFing.png);
     background-size: cover;
 }
 
