--- a/style.css
+++ b/style.css
@@ -847,3 +847,270 @@ body {
     transform: translate(461px, -315px);
     width: 21rem;
 }
+
+
+/* MEDIA QUERIES */
+
+
+@media (max-width: 1200px) {
+    .flexbox-container {
+        width: 100%;
+    }
+
+    .flexbox-item {
+        width: 30rem;
+        margin: 10px;
+        background-color: rgb(40, 28, 66);
+        border: 3px solid rgb(48, 48, 48);
+        padding-left: 2rem;
+        padding-right: 2rem;
+        padding-top: 2rem;
+        padding-bottom: 0rem;
+    }
+
+    .fb-left-title {
+
+        margin-top: -10px;
+    }
+
+    .bottom-text-leftbox {
+
+        transform: translate(0rem, -8rem)
+    }
+
+
+    .fb-left {
+        min-height: -5rem;
+        /* flex-shrink: 1; */
+        /* flex-grow: 0; */
+    }
+
+    .flexbox-container {
+        display: flex;
+        justify-content: center;
+        height: 40rem;
+    }
+
+    .right-title {
+
+        margin-top: -8px
+    }
+
+    .dub-info-table {
+        width: 453px;
+        height: 233px;
+        transform: translate(15px, -59px);
+        border-collapse: collapse;
+        margin: 0px;
+        font-size: 15px;
+        background-color: rgb(226, 226, 226);
+        font-weight: bold;
+    }
+
+    .dub-info-table th,
+    .dub-info-table td {
+        padding: 1px 2px;
+    }
+
+    .chart-js-trial-main {
+        width: 455px;
+        height: 289px;
+        transform: translate(14px, -32px);
+    }
+
+
+    @media (max-width: 1000px) {
+        .flexbox-container {
+            width: 100%;
+            height: 36rem;
+        }
+
+        .flexbox-item {
+            width: 25rem;
+            margin: 10px;
+            background-color: rgb(40, 28, 66);
+            border: 3px solid rgb(48, 48, 48);
+            padding-left: 0rem;
+            padding-right: 0rem;
+            padding-top: 2rem;
+            padding-bottom: 0rem;
+        }
+
+        .bottom-text-leftbox {
+
+            transform: translate(0rem, -8rem);
+            font-size: 1rem;
+        }
+
+        .dub-info-table {
+            width: 366px;
+            height: 233px;
+        }
+
+
+        .dub-info-table th,
+        .dub-info-table td {
+            padding: 0px 0px;
+        }
+
+        .chart-js-trial-main {
+            width: 369px;
+        }
+
+
+        @media (max-width: 800px) {
+            .flexbox-container {
+                width: 100%;
+                height: 33rem;
+            }
+
+            .flexbox-item {
+                width: 25rem;
+                margin: 10px;
+                background-color: rgb(40, 28, 66);
+                border: 3px solid rgb(48, 48, 48);
+                padding-left: 0rem;
+                padding-right: 0rem;
+                padding-top: 2rem;
+                padding-bottom: 0rem;
+            }
+
+            .bottom-text-leftbox {
+
+                transform: translate(0rem, -8rem);
+                font-size: .75rem;
+            }
+
+            .dub-info-table {
+                width: 344px;
+                height: 229px;
+            }
+
+
+            .dub-info-table th,
+            .dub-info-table td {
+                padding: 0px 0px;
+            }
+
+            .chart-js-trial-main {
+                width: 344px;
+            }
+
+
+            @media (max-width: 800px) {
+                .flexbox-container {
+                    width: 100%;
+                    height: 30rem;
+                }
+
+                .flexbox-item {
+                    width: 25rem;
+                    margin: 10px;
+                    background-color: rgb(40, 28, 66);
+                    border: 3px solid rgb(48, 48, 48);
+                    padding-left: 0rem;
+                    padding-right: 0rem;
+                    padding-top: 2rem;
+                    padding-bottom: 0rem;
+                }
+
+                .bottom-text-leftbox {
+
+                    transform: translate(0rem, -8rem);
+                    font-size: .5rem;
+                }
+
+                .dub-info-table {
+                    width: 316px;
+                    height: 200px;
+                    font-size: 10px;
+                }
+
+
+                .dub-info-table th,
+                .dub-info-table td {
+                    padding: 0px 0px;
+                }
+
+                .chart-js-trial-main {
+
+                    display: none;
+                }
+
+                .fb-left-title {
+                    font-size: 1rem;
+                }
+
+                .right-title {
+                    font-size: 1rem;
+                }
+
+                @media (max-width: 600px) {
+                    .flexbox-container {
+                        width: 100%;
+                        height: 25rem;
+                    }
+
+                    .flexbox-item {
+                        width: 25rem;
+                        margin: 10px;
+                        background-color: rgb(40, 28, 66);
+                        border: 3px solid rgb(48, 48, 48);
+                        padding-left: 0rem;
+                        padding-right: 0rem;
+                        padding-top: 2rem;
+                        padding-bottom: 0rem;
+                    }
+
+                    .bottom-text-leftbox {
+
+                        transform: translate(0rem, -8rem);
+                        font-size: .5rem;
+                    }
+
+                    .dub-info-table {
+                        width: 220px;
+                        height: 250px;
+                        font-size: 10px;
+                    }
+
+
+                    .dub-info-table th,
+                    .dub-info-table td {
+                        padding: 0px 0px;
+                    }
+
+                    .chart-js-trial-main {
+
+                        display: none;
+                    }
+
+                    .fb-left-title {
+                        font-size: 1rem;
+                    }
+
+                    .right-title {
+                        font-size: 1rem;
+                    }
+
+
+
+
+
+
+
+
+                    /* Extra small devices (phones, 600px and down) 
+@media only screen and (max-width: 600px) {...}*/
+
+                    /* Small devices (portrait tablets and large phones, 600px and up) 
+@media only screen and (min-width: 600px) {...}
+
+/* Medium devices (landscape tablets, 768px and up) 
+@media only screen and (min-width: 768px) {...}
+
+/* Large devices (laptops/desktops, 992px and up) 
+@media only screen and (min-width: 992px) {...}
+
+/* Extra large devices (large laptops and desktops, 1200px and up)
+@media only screen and (min-width: 1200px) {...}  */
