Add footer text

--- a/style.css
+++ b/style.css
@@ -848,6 +848,23 @@ body {
     width: 21rem;
 }
 
+footer {
+
+    text-align: center;
+    font-size: .75rem;
+    font-weight: bold;
+    padding-bottom: 2rem;
+    transform: translate(0px, -49px);
+}
+
+.page2-footer {
+    text-align: center;
+    font-size: .75rem;
+    font-weight: bold;
+    padding-bottom: 2rem;
+    transform: translate(10px, 735px);
+}
+
 
 /* MEDIA QUERIES */
 
@@ -1091,25 +1108,3 @@ body {
                     .right-title {
                         font-size: 1rem;
                     }
-
-
-
-
-
-
-
-
-                    /* Extra small devices (phones, 600px and down) 
-@media only screen and (max-width: 600px) {...}*/
-
-                    /* Small devices (portrait tablets and large phones, 600px and up) 
-@media only screen and (min-width: 600px) {...}
-
-/* Medium devices (landscape tablets, 768px and up) 
-@media only screen and (min-width: 768px) {...}
-
-/* Large devices (laptops/desktops, 992px and up) 
-@media only screen and (min-width: 992px) {...}
-
-/* Extra large devices (large laptops and desktops, 1200px and up)
-@media only screen and (min-width: 1200px) {...}  */
